# bound_fastapi_htmx

./: .env.redis  .gitignore  Dockerfile  Dockerfile.dev  README.md  app.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  services.py
db/: __init__.py  config.py  database.py
static/css/: main.css
templates/: base.html  index.html
templates/forms/: uploadfile_htmx.html
templates/primitives/upload/: dismiss.html  success.html
templates/processing_files/: detail.html  list.html
web/: app.py  processing_file.py  services.py  templates.py  worker.py
web/db/: __init__.py  config.py  database.py  models.py
